Style menu card

--- a/main.scss
+++ b/main.scss
@@ -224,6 +224,7 @@ footer{
 .menu1{
     text-align: center;
     background-color: #FFCDD2;
+    margin-top: 4rem;
     margin-right: 10rem;
     margin-left: 10rem;
     margin-bottom: 10rem;
@@ -236,7 +237,7 @@ footer{
 h1, h2, .tete, .pied{
     text-align: center;
     font-size: 2rem;
-    color: rgb(110, 6, 6);
+    color: rgb(59, 1, 1);
 }
 .tete, .pied{
     font-weight: bold;
@@ -246,20 +247,25 @@ h2{
     position: relative;
     cursor: pointer;
 }
-h2:after {
+.fas{
+    color: coral;
+}
+h2::after {
     content: '';
     position: absolute;
     left: 0;
     bottom: 0;
     width: 0;
-    height: 2px;
-    background: red;
-    transition: transform 500ms ease;
+    height: 4px;
+    background-color: aqua;
+    transform-origin: 0% 50%;
+    transform: scaleX(0);
+    transition: transform 1000ms cubic-bezier(.32,0,.07,1);
   }
    
-  h2:hover:after {
-    width: 100%;
-  }
+  h2:hover::after {
+    transform: scaleX(1);
+}
 h1{
     padding-top: 4rem;
     padding-bottom: 3rem;
@@ -296,7 +302,7 @@ h1{
 
 .menu2{
     text-align: center;
-    background-color: rgb(255, 228, 232);
+    background-color: #fdf2f4;
     margin-right: 10rem;
     margin-left: 10rem;
     margin-bottom: 10rem;
@@ -306,6 +312,15 @@ h1{
     font-family: Helvetica, Arial;
     padding-left: 10rem;
     padding-right: 10rem;
+}
+.menu2 > h1{
+    background: #df560f;
+    background: linear-gradient(90deg,#df560f 20%, #3211c5 55%);
+    background: -webkit-linear-gradient(90deg,#df560f 20%, #3211c5 55%);
+    background: -moz-linear-gradient(90deg,#df560f 20%, #3211c5 55%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
 
  // page menu 3
@@ -339,4 +354,14 @@ h1{
     font-family: Helvetica, Arial;
     padding-left: 10rem;
     padding-right: 10rem;
+}
+.menu4 > h1{
+    color: #34C924;
+}
+.menu4 > h2, .menu3 > h2{
+    color: black;
+    font-style: italic;
+}
+.menu3 > h1{
+    color: #0770e0;
 }
