--- a/style.css
+++ b/style.css
@@ -296,6 +296,7 @@ footer {
 .menu1 {
   text-align: center;
   background-color: #FFCDD2;
+  margin-top: 4rem;
   margin-right: 10rem;
   margin-left: 10rem;
   margin-bottom: 10rem;
@@ -309,7 +310,7 @@ footer {
 h1, h2, .tete, .pied {
   text-align: center;
   font-size: 2rem;
-  color: #6e0606;
+  color: #3b0101;
 }
 
 .tete, .pied {
@@ -322,19 +323,25 @@ h2 {
   cursor: pointer;
 }
 
-h2:after {
+.fas {
+  color: coral;
+}
+
+h2::after {
   content: "";
   position: absolute;
   left: 0;
   bottom: 0;
   width: 0;
-  height: 2px;
-  background: red;
-  transition: transform 500ms ease;
+  height: 4px;
+  background-color: aqua;
+  transform-origin: 0% 50%;
+  transform: scaleX(0);
+  transition: transform 1000ms cubic-bezier(0.32, 0, 0.07, 1);
 }
 
-h2:hover:after {
-  width: 100%;
+h2:hover::after {
+  transform: scaleX(1);
 }
 
 h1 {
@@ -376,7 +383,7 @@ h1 {
 
 .menu2 {
   text-align: center;
-  background-color: #ffe4e8;
+  background-color: #fdf2f4;
   margin-right: 10rem;
   margin-left: 10rem;
   margin-bottom: 10rem;
@@ -386,6 +393,16 @@ h1 {
   font-family: Helvetica, Arial;
   padding-left: 10rem;
   padding-right: 10rem;
+}
+
+.menu2 > h1 {
+  background: #df560f;
+  background: linear-gradient(90deg, #df560f 20%, #3211c5 55%);
+  background: -webkit-linear-gradient(90deg, #df560f 20%, #3211c5 55%);
+  background: -moz-linear-gradient(90deg, #df560f 20%, #3211c5 55%);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 
 .menu3 {
@@ -414,6 +431,19 @@ h1 {
   font-family: Helvetica, Arial;
   padding-left: 10rem;
   padding-right: 10rem;
+}
+
+.menu4 > h1 {
+  color: #34C924;
+}
+
+.menu4 > h2, .menu3 > h2 {
+  color: black;
+  font-style: italic;
+}
+
+.menu3 > h1 {
+  color: #0770e0;
 }
 
 /*# sourceMappingURL=style.css.map */
