--- a/main.scss
+++ b/main.scss
@@ -246,7 +246,7 @@ h2{
     margin-top: 6rem;
     position: relative;
     cursor: pointer;
-    background: linear-gradient(to top, rgba(255, 0, 0, 0.5) 0%, rgba(255, 0, 0, 0.5) 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
+    background: linear-gradient(to top, #B71C1C 0%, #B71C1C 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
     transition: background-size 2s;
     background-size: 0% 100%;
 }
@@ -288,6 +288,22 @@ h1{
     text-align: left;
     margin-right: 46rem;
 }
+.plat_appetit{
+    display: inline-block;
+    line-height: 4rem;
+    font-size: 2rem;
+    padding-top: 4rem;
+    text-align: left;
+    color: #df560f;
+    margin-right: 20rem;
+}
+.prix_appetit{
+    display: inline-block;
+    line-height: 4rem;
+    font-size: 2rem;
+    padding-top: 4rem;
+    color: #DF560F;
+}
 .plat_papilles{
     display: inline-block;
     line-height: 4rem;
@@ -295,6 +311,23 @@ h1{
     padding-top: 4rem;
     text-align: left;
     margin-right: 4rem;
+    color: #5f27be;
+}
+.prix_papilles{
+    display: inline-block;
+    line-height: 4rem;
+    font-size: 2rem;
+    padding-top: 4rem;
+    color: #5f27be;
+}
+.plat_sucrée{
+    display: inline-block;
+    line-height: 4rem;
+    font-size: 2rem;
+    padding-top: 4rem;
+    text-align: left;
+    margin-right: 22rem;
+    color: #20078f;
 }
 .plat_commencer{
     display: inline-block;
