--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html {
   font-size: 62.5%;
 }
@@ -321,7 +322,7 @@ h2 {
   margin-top: 6rem;
   position: relative;
   cursor: pointer;
-  background: linear-gradient(to top, rgba(255, 0, 0, 0.5) 0%, rgba(255, 0, 0, 0.5) 10%, transparent 10.01%) no-repeat left bottom/0 100%;
+  background: linear-gradient(to top, #B71C1C 0%, #B71C1C 10%, transparent 10.01%) no-repeat left bottom/0 100%;
   transition: background-size 2s;
   background-size: 0% 100%;
 }
@@ -370,6 +371,24 @@ h1 {
   margin-right: 46rem;
 }
 
+.plat_appetit {
+  display: inline-block;
+  line-height: 4rem;
+  font-size: 2rem;
+  padding-top: 4rem;
+  text-align: left;
+  color: #df560f;
+  margin-right: 20rem;
+}
+
+.prix_appetit {
+  display: inline-block;
+  line-height: 4rem;
+  font-size: 2rem;
+  padding-top: 4rem;
+  color: #DF560F;
+}
+
 .plat_papilles {
   display: inline-block;
   line-height: 4rem;
@@ -377,6 +396,25 @@ h1 {
   padding-top: 4rem;
   text-align: left;
   margin-right: 4rem;
+  color: #5f27be;
+}
+
+.prix_papilles {
+  display: inline-block;
+  line-height: 4rem;
+  font-size: 2rem;
+  padding-top: 4rem;
+  color: #5f27be;
+}
+
+.plat_sucrée {
+  display: inline-block;
+  line-height: 4rem;
+  font-size: 2rem;
+  padding-top: 4rem;
+  text-align: left;
+  margin-right: 22rem;
+  color: #20078f;
 }
 
 .plat_commencer {
