Add style menu cards

--- a/style.css
+++ b/style.css
@@ -44,9 +44,9 @@ header {
   width: 30rem;
   line-height: 2rem;
   font-size: 2rem;
-  box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
-  -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
-  -webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+  box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
   position: relative;
   overflow: hidden;
   opacity: 1;
@@ -86,9 +86,9 @@ header {
   width: 30rem;
   line-height: 2rem;
   font-size: 2rem;
-  box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
-  -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
-  -webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+  box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
   position: relative;
   overflow: hidden;
   opacity: 1;
@@ -132,9 +132,9 @@ header {
   width: 30rem;
   line-height: 2rem;
   font-size: 2rem;
-  box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
-  -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
-  -webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+  box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
   position: relative;
   overflow: hidden;
   opacity: 1;
@@ -172,9 +172,9 @@ header {
   width: 30rem;
   line-height: 2rem;
   font-size: 2rem;
-  box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
-  -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
-  -webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+  box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
   position: relative;
   overflow: hidden;
   opacity: 1;
@@ -308,7 +308,7 @@ footer {
 }
 .menu1 {
   text-align: center;
-  background-color: #FFCDD2;
+  background-color: #fcdfdb;
   margin-top: 2rem;
   margin-right: 10rem;
   margin-left: 10rem;
@@ -318,6 +318,9 @@ footer {
   font-family: Helvetica, Arial;
   padding-left: 10rem;
   padding-right: 10rem;
+  box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
 }
 
 h1, h2, .header, .footer {
@@ -365,22 +368,50 @@ h1 {
   padding-top: 4rem;
 }
 
-.plat_esquisse {
-  display: inline-block;
-  line-height: 4rem;
-  font-size: 2rem;
-  padding-top: 4rem;
-  text-align: left;
-  margin-right: 33rem;
+.prix {
+  text-align: right;
+  margin-left: 3rem;
 }
 
-.plat_terminer {
-  display: inline-block;
-  line-height: 4rem;
-  font-size: 2rem;
-  padding-top: 4rem;
+.plat {
+  margin-right: 10rem;
   text-align: left;
-  margin-right: 46rem;
+}
+
+.footer {
+  margin-bottom: 10rem;
+  margin-top: 6rem;
+}
+
+.footer .fas {
+  margin-right: 2rem;
+}
+
+.menu2 {
+  text-align: center;
+  background-color: #fff5fe;
+  margin-right: 10rem;
+  margin-left: 10rem;
+  margin-bottom: 10rem;
+  margin-top: 4rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  font-family: Helvetica, Arial;
+  padding-left: 10rem;
+  padding-right: 10rem;
+  box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+}
+
+.menu2 > h1 {
+  background: #df560f;
+  background: linear-gradient(90deg, #df560f 20%, #3211c5 55%);
+  background: -webkit-linear-gradient(90deg, #df560f 20%, #3211c5 55%);
+  background: -moz-linear-gradient(90deg, #df560f 20%, #3211c5 55%);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 
 .plat_appetit {
@@ -429,75 +460,44 @@ h1 {
   color: #20078f;
 }
 
+.menu3 {
+  text-align: center;
+  background-color: #edefef;
+  margin-right: 10rem;
+  margin-left: 10rem;
+  margin-bottom: 10rem;
+  margin-top: 4rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  font-family: Helvetica, Arial;
+  padding-left: 10rem;
+  padding-right: 10rem;
+  box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+}
+
+.plat_terminer {
+  display: inline-block;
+  line-height: 4rem;
+  font-size: 2rem;
+  padding-top: 4rem;
+  text-align: left;
+  margin-right: 34rem;
+}
+
 .plat_commencer {
   display: inline-block;
   line-height: 4rem;
   font-size: 2rem;
   padding-top: 4rem;
   text-align: left;
-  margin-right: 18rem;
-}
-
-.prix {
-  text-align: right;
-  margin-left: 3rem;
-}
-
-.plat {
-  margin-right: 24rem;
-  text-align: left;
-}
-
-.pied {
-  margin-bottom: 10rem;
-  margin-top: 6rem;
-}
-
-.pied .fas {
-  margin-right: 2rem;
-}
-
-.menu2 {
-  text-align: center;
-  background-color: #fdf2f4;
-  margin-right: 10rem;
-  margin-left: 10rem;
-  margin-bottom: 10rem;
-  margin-top: 4rem;
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-  font-family: Helvetica, Arial;
-  padding-left: 10rem;
-  padding-right: 10rem;
-}
-
-.menu2 > h1 {
-  background: #df560f;
-  background: linear-gradient(90deg, #df560f 20%, #3211c5 55%);
-  background: -webkit-linear-gradient(90deg, #df560f 20%, #3211c5 55%);
-  background: -moz-linear-gradient(90deg, #df560f 20%, #3211c5 55%);
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-}
-
-.menu3 {
-  text-align: center;
-  background-color: #e7f3fa;
-  margin-right: 10rem;
-  margin-left: 10rem;
-  margin-bottom: 10rem;
-  margin-top: 4rem;
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-  font-family: Helvetica, Arial;
-  padding-left: 10rem;
-  padding-right: 10rem;
+  margin-right: 3rem;
 }
 
 .menu4 {
   text-align: center;
-  background-color: #FAFAFA;
+  background-color: #fdfffd;
   margin-right: 10rem;
   margin-left: 10rem;
   margin-bottom: 10rem;
@@ -507,6 +507,36 @@ h1 {
   font-family: Helvetica, Arial;
   padding-left: 10rem;
   padding-right: 10rem;
+  box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+}
+
+.plat_esquisse {
+  display: inline-block;
+  line-height: 4rem;
+  font-size: 2rem;
+  padding-top: 4rem;
+  text-align: left;
+  margin-right: 14rem;
+}
+
+.plat_maître {
+  display: inline-block;
+  line-height: 4rem;
+  font-size: 2rem;
+  padding-top: 4rem;
+  text-align: left;
+  margin-right: 2rem;
+}
+
+.plat_art {
+  display: inline-block;
+  line-height: 4rem;
+  font-size: 2rem;
+  padding-top: 4rem;
+  text-align: left;
+  margin-right: 4rem;
 }
 
 .menu4 > h1 {
