--- a/main.scss
+++ b/main.scss
@@ -15,9 +15,9 @@ $anim-delay: $anim-dur / 5;
     width: 30rem;
     line-height: 2rem;
     font-size: 2rem;
-    box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
-    -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
-    -webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+    box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+    -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
     position: relative;
     overflow: hidden;
     opacity: 1;
@@ -226,7 +226,7 @@ footer{
 
 .menu1{
     text-align: center;
-    background-color: #FFCDD2;
+    background-color: #fcdfdb;
     margin-top: 2rem;
     margin-right: 10rem;
     margin-left: 10rem;
@@ -236,6 +236,9 @@ footer{
     font-family: Helvetica, Arial;
     padding-left: 10rem;
     padding-right: 10rem;
+    box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+    -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
 }        
 h1, h2, .header, .footer{
     text-align: center;
@@ -275,21 +278,48 @@ h1{
     font-size: 2rem;
     padding-top: 4rem;
 }
-.plat_esquisse{
-    display: inline-block;
-    line-height: 4rem;
-    font-size: 2rem;
-    padding-top: 4rem;
-    text-align: left;
-    margin-right: 33rem;
+.prix{
+    text-align: right;
+    margin-left: 3rem;
 }
-.plat_terminer{
-    display: inline-block;
-    line-height: 4rem;
-    font-size: 2rem;
-    padding-top: 4rem;
+.plat{
+    margin-right: 10rem;
     text-align: left;
-    margin-right: 46rem;
+}
+.footer{
+    margin-bottom: 10rem;
+    margin-top: 6rem;
+}
+.footer .fas{
+    margin-right: 2rem;
+}
+
+// Page menu 2
+
+.menu2{
+    text-align: center;
+    background-color: #fff5fe;
+    margin-right: 10rem;
+    margin-left: 10rem;
+    margin-bottom: 10rem;
+    margin-top: 4rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    font-family: Helvetica, Arial;
+    padding-left: 10rem;
+    padding-right: 10rem;
+    box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+    -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+}
+.menu2 > h1{
+    background: #df560f;
+    background: linear-gradient(90deg,#df560f 20%, #3211c5 55%);
+    background: -webkit-linear-gradient(90deg,#df560f 20%, #3211c5 55%);
+    background: -moz-linear-gradient(90deg,#df560f 20%, #3211c5 55%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
 .plat_appetit{
     display: inline-block;
@@ -332,61 +362,13 @@ h1{
     margin-right: 22rem;
     color: #20078f;
 }
-.plat_commencer{
-    display: inline-block;
-    line-height: 4rem;
-    font-size: 2rem;
-    padding-top: 4rem;
-    text-align: left;
-    margin-right: 18rem;
-}
-.prix{
-    text-align: right;
-    margin-left: 3rem;
-}
-.plat{
-    margin-right: 24rem;
-    text-align: left;
-}
-.pied{
-    margin-bottom: 10rem;
-    margin-top: 6rem;
-}
-.pied .fas{
-    margin-right: 2rem;
-}
-
-// Page menu 2
-
-.menu2{
-    text-align: center;
-    background-color: #fdf2f4;
-    margin-right: 10rem;
-    margin-left: 10rem;
-    margin-bottom: 10rem;
-    margin-top: 4rem;
-    padding-top: 4rem;
-    padding-bottom: 4rem;
-    font-family: Helvetica, Arial;
-    padding-left: 10rem;
-    padding-right: 10rem;
-}
-.menu2 > h1{
-    background: #df560f;
-    background: linear-gradient(90deg,#df560f 20%, #3211c5 55%);
-    background: -webkit-linear-gradient(90deg,#df560f 20%, #3211c5 55%);
-    background: -moz-linear-gradient(90deg,#df560f 20%, #3211c5 55%);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-}
 
  // page menu 3
 
 
  .menu3{
     text-align: center;
-    background-color:  rgb(231, 243, 250);
+    background-color: #edefef;
     margin-right: 10rem;
     margin-left: 10rem;
     margin-bottom: 10rem;
@@ -396,13 +378,32 @@ h1{
     font-family: Helvetica, Arial;
     padding-left: 10rem;
     padding-right: 10rem;
+    box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+    -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+}
+.plat_terminer{
+    display: inline-block;
+    line-height: 4rem;
+    font-size: 2rem;
+    padding-top: 4rem;
+    text-align: left;
+    margin-right: 34rem;
+}
+.plat_commencer{
+    display: inline-block;
+    line-height: 4rem;
+    font-size: 2rem;
+    padding-top: 4rem;
+    text-align: left;
+    margin-right: 3rem;
 }
 
 // page menu 4
 
 .menu4{
     text-align: center;
-    background-color:  #FAFAFA;
+    background-color:  #fdfffd;
     margin-right: 10rem;
     margin-left: 10rem;
     margin-bottom: 10rem;
@@ -412,6 +413,33 @@ h1{
     font-family: Helvetica, Arial;
     padding-left: 10rem;
     padding-right: 10rem;
+    box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+    -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+}
+.plat_esquisse{
+    display: inline-block;
+    line-height: 4rem;
+    font-size: 2rem;
+    padding-top: 4rem;
+    text-align: left;
+    margin-right: 14rem;
+}
+.plat_maître{
+    display: inline-block;
+    line-height: 4rem;
+    font-size: 2rem;
+    padding-top: 4rem;
+    text-align: left;
+    margin-right: 2rem;
+}
+.plat_art{
+    display: inline-block;
+    line-height: 4rem;
+    font-size: 2rem;
+    padding-top: 4rem;
+    text-align: left;
+    margin-right: 4rem;
 }
 .menu4 > h1{
     color: #34C924;
