--- a/style.css
+++ b/style.css
@@ -25,11 +25,15 @@ header {
   font-weight: bold;
   height: 6rem;
   text-align: center;
-  font-family: "roboto_condensedbold_italic";
-  src: url("RobotoCondensed-BoldItalic-webfont.eot");
-  src: url("RobotoCondensed-BoldItalic-webfont.eot?#iefix") format("embedded-opentype"), url("RobotoCondensed-BoldItalic-webfont.woff2") format("woff2"), url("RobotoCondensed-BoldItalic-webfont.woff") format("woff"), url("RobotoCondensed-BoldItalic-webfont.ttf") format("truetype"), url("RobotoCondensed-BoldItalic-webfont.svg#roboto_condensedbold_italic") format("svg");
-  font-weight: normal;
-  font-style: normal;
+}
+@font-face {
+  header {
+    font-family: "roboto_condensedbold_italic";
+    src: url("RobotoCondensed-BoldItalic-webfont.eot");
+    src: url("RobotoCondensed-BoldItalic-webfont.eot?#iefix") format("embedded-opentype"), url("RobotoCondensed-BoldItalic-webfont.woff2") format("woff2"), url("RobotoCondensed-BoldItalic-webfont.woff") format("woff"), url("RobotoCondensed-BoldItalic-webfont.ttf") format("truetype"), url("RobotoCondensed-BoldItalic-webfont.svg#roboto_condensedbold_italic") format("svg");
+    font-weight: normal;
+    font-style: normal;
+  }
 }
 
 .btn_note {
@@ -111,13 +115,12 @@ header {
 .btn_chic p a {
   text-decoration: none;
   font-family: Arial, sans-serif;
-  background: #df560f;
-  background: linear-gradient(90deg, #df560f 20%, #3211c5 55%);
-  background: -webkit-linear-gradient(90deg, #df560f 20%, #3211c5 55%);
-  background: -moz-linear-gradient(90deg, #df560f 20%, #3211c5 55%);
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
+  background: #e0881d;
+  background: linear-gradient(146deg, #924cf9 55%, #e0881d 20%);
+  background: -webkit-linear-gradient(146deg, #924cf9 55%, #e0881d 20%);
+  background: -moz-linear-gradient(146deg, #924cf9 55%, #e0881d 20%);
   -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .btn_delice {
@@ -156,7 +159,7 @@ header {
 
 .btn_delice p a {
   text-decoration: none;
-  color: #0770e0;
+  color: #0887fb;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
@@ -196,7 +199,7 @@ header {
 
 .btn_gout p a {
   text-decoration: none;
-  color: #34C924;
+  color: #489b40;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
@@ -228,8 +231,8 @@ header {
 }
 
 .loader > div {
-  width: 10px;
-  height: 10px;
+  width: 5px;
+  height: 5px;
   background-color: #fdcb46;
   border-radius: 100%;
   display: inline-block;
@@ -409,7 +412,6 @@ h1 {
   background: linear-gradient(90deg, #df560f 20%, #3211c5 55%);
   background: -webkit-linear-gradient(90deg, #df560f 20%, #3211c5 55%);
   background: -moz-linear-gradient(90deg, #df560f 20%, #3211c5 55%);
-  background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
@@ -518,7 +520,7 @@ h1 {
   font-size: 2rem;
   padding-top: 4rem;
   text-align: left;
-  margin-right: 14rem;
+  margin-right: 12rem;
 }
 
 .plat_maître {
