--- a/main.scss
+++ b/main.scss
@@ -27,6 +27,17 @@ $anim-delay: $anim-dur / 5;
         opacity: 0.5;   
     }
 }
+@font-face {
+    font-family: 'roboto_condensedbold_italic';
+        src: url('RobotoCondensed-BoldItalic-webfont.eot');
+        src: url('RobotoCondensed-BoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
+            url('RobotoCondensed-BoldItalic-webfont.woff2') format('woff2'),
+            url('RobotoCondensed-BoldItalic-webfont.woff') format('woff'),
+            url('RobotoCondensed-BoldItalic-webfont.ttf') format('truetype'),
+            url('RobotoCondensed-BoldItalic-webfont.svg#roboto_condensedbold_italic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 @mixin transform-menu {
     transform: scale(1);
     -webkit-transform: scale(1);
@@ -58,17 +69,7 @@ header{
     font-weight: bold;
     height: 6rem;
     text-align: center;
-    @font-face {
-        font-family: 'roboto_condensedbold_italic';
-            src: url('RobotoCondensed-BoldItalic-webfont.eot');
-            src: url('RobotoCondensed-BoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
-                url('RobotoCondensed-BoldItalic-webfont.woff2') format('woff2'),
-                url('RobotoCondensed-BoldItalic-webfont.woff') format('woff'),
-                url('RobotoCondensed-BoldItalic-webfont.ttf') format('truetype'),
-                url('RobotoCondensed-BoldItalic-webfont.svg#roboto_condensedbold_italic') format('svg');
-        font-weight: normal;
-        font-style: normal;
-    }
+    font-family: 'roboto_condensedbold_italic';
 }
 .btn_note{
     background: #fcdfdb;
@@ -82,7 +83,10 @@ header{
     font-family: 'comic sans ms';
     font-weight: bold;
     font-style: normal;
-    color: #381002;    
+    color: #3d1319;    
+}
+.carte_note{
+    text-transform: uppercase;
 }
 .btn_chic{
     background: #fff5fe;
@@ -94,12 +98,14 @@ header{
 .btn_chic p a{
     text-decoration: none;
     font-family: Arial, sans-serif;
-    background: #e0881d;
-    background: linear-gradient(146deg,#924cf9 55%, #e0881d 20%);
-    background: -webkit-linear-gradient(146deg,#924cf9 55%, #e0881d 20%);
-    background: -moz-linear-gradient(146deg,#924cf9 55%, #e0881d 20%);
+    background: rgb(146,76,249);
+    background: linear-gradient(325deg, rgba(146,76,249,1) 30%, rgba(224,136,29,1) 93%);
+    background: -moz-linear-gradient(325deg, rgba(146,76,249,1) 30%, rgba(224,136,29,1) 93%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+.carte_chic{
+    color: #c77412;
 }
 .btn_delice {
     background: #f9f9f9;
@@ -110,9 +116,16 @@ header{
 }
 .btn_delice p a{
     text-decoration: none;
-    color: #0887fb;
+    background: rgb(27,76,228);
+    background: linear-gradient(90deg, rgba(27,76,228,1) 35%, rgba(8,137,251,1) 54%);
+    background: -moz-linear-gradient(90deg, rgba(27,76,228,1) 35%, rgba(8,137,251,1) 54%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
+.carte_delice{
+    color: #0887fb;
+}
 .btn_gout{
     background: #fdfffd;
     @include btn-menu;
@@ -122,8 +135,15 @@ header{
 }
 .btn_gout p a{
     text-decoration: none;
-    color: #489b40;
+    background: rgb(65,150,60);
+    background: linear-gradient(90deg, rgba(65,150,60,1) 23%, rgba(190,255,127,1) 84%);
+    background: -moz-linear-gradient(90deg, rgba(65,150,60,1) 23%, rgba(190,255,127,1) 84%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.carte_gout{
+    color: #72bf56;
 }
 .btn{
     display: flex;
@@ -222,6 +242,11 @@ footer{
         transform: translateX(1% * -1);
     }
 }
+img{
+    display: block;
+    width: 90rem;
+    height: 5rem;
+}
 
         //page Menu 1
 
@@ -244,7 +269,7 @@ footer{
 h1, h2, .header, .footer{
     text-align: center;
     font-size: 2rem;
-    color: rgb(59, 1, 1);
+    color: #3d1319;
 }
 .header, .footer{
     font-weight: bold;
@@ -261,7 +286,11 @@ h2:hover {
     background-size: 100% 100%;
   }
 .fas{
-    color: coral;
+    background: rgb(240,85,97);
+    background: linear-gradient(90deg, rgba(240,85,97,1) 0%, rgba(242,107,100,1) 31%, rgba(246,145,106,1) 100%);
+    background: -moz-linear-gradient(90deg, rgba(240,85,97,1) 0%, rgba(242,107,100,1) 31%, rgba(246,145,106,1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 h1{
     padding-top: 4rem;
@@ -327,7 +356,7 @@ h1{
     font-size: 2rem;
     padding-top: 4rem;
     text-align: left;
-    color: #df560f;
+    color: #c67412;
     margin-right: 20rem;
 }
 .prix_appetit{
@@ -335,7 +364,7 @@ h1{
     line-height: 4rem;
     font-size: 2rem;
     padding-top: 4rem;
-    color: #DF560F;
+    color: #c67412;
 }
 .plat_papilles{
     display: inline-block;
@@ -344,14 +373,14 @@ h1{
     padding-top: 4rem;
     text-align: left;
     margin-right: 4rem;
-    color: #5f27be;
+    color: #fff5fe;
 }
 .prix_papilles{
     display: inline-block;
     line-height: 4rem;
     font-size: 2rem;
     padding-top: 4rem;
-    color: #5f27be;
+    color: #fff5fe;
 }
 .plat_sucrée{
     display: inline-block;
@@ -360,7 +389,7 @@ h1{
     padding-top: 4rem;
     text-align: left;
     margin-right: 22rem;
-    color: #20078f;
+    color: #6e4ccc;
 }
 
  // page menu 3
