--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
+@font-face {
+  font-family: "roboto_condensedbold_italic";
+  src: url("RobotoCondensed-BoldItalic-webfont.eot");
+  src: url("RobotoCondensed-BoldItalic-webfont.eot?#iefix") format("embedded-opentype"), url("RobotoCondensed-BoldItalic-webfont.woff2") format("woff2"), url("RobotoCondensed-BoldItalic-webfont.woff") format("woff"), url("RobotoCondensed-BoldItalic-webfont.ttf") format("truetype"), url("RobotoCondensed-BoldItalic-webfont.svg#roboto_condensedbold_italic") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 html {
   font-size: 62.5%;
 }
@@ -25,15 +32,7 @@ header {
   font-weight: bold;
   height: 6rem;
   text-align: center;
-}
-@font-face {
-  header {
-    font-family: "roboto_condensedbold_italic";
-    src: url("RobotoCondensed-BoldItalic-webfont.eot");
-    src: url("RobotoCondensed-BoldItalic-webfont.eot?#iefix") format("embedded-opentype"), url("RobotoCondensed-BoldItalic-webfont.woff2") format("woff2"), url("RobotoCondensed-BoldItalic-webfont.woff") format("woff"), url("RobotoCondensed-BoldItalic-webfont.ttf") format("truetype"), url("RobotoCondensed-BoldItalic-webfont.svg#roboto_condensedbold_italic") format("svg");
-    font-weight: normal;
-    font-style: normal;
-  }
+  font-family: "roboto_condensedbold_italic";
 }
 
 .btn_note {
@@ -75,7 +74,11 @@ header {
   font-family: "comic sans ms";
   font-weight: bold;
   font-style: normal;
-  color: #381002;
+  color: #3d1319;
+}
+
+.carte_note {
+  text-transform: uppercase;
 }
 
 .btn_chic {
@@ -115,12 +118,15 @@ header {
 .btn_chic p a {
   text-decoration: none;
   font-family: Arial, sans-serif;
-  background: #e0881d;
-  background: linear-gradient(146deg, #924cf9 55%, #e0881d 20%);
-  background: -webkit-linear-gradient(146deg, #924cf9 55%, #e0881d 20%);
-  background: -moz-linear-gradient(146deg, #924cf9 55%, #e0881d 20%);
+  background: #924cf9;
+  background: linear-gradient(325deg, #924cf9 30%, #e0881d 93%);
+  background: -moz-linear-gradient(325deg, #924cf9 30%, #e0881d 93%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.carte_chic {
+  color: #c77412;
 }
 
 .btn_delice {
@@ -159,8 +165,16 @@ header {
 
 .btn_delice p a {
   text-decoration: none;
-  color: #0887fb;
+  background: #1b4ce4;
+  background: linear-gradient(90deg, #1b4ce4 35%, #0889fb 54%);
+  background: -moz-linear-gradient(90deg, #1b4ce4 35%, #0889fb 54%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.carte_delice {
+  color: #0887fb;
 }
 
 .btn_gout {
@@ -199,8 +213,16 @@ header {
 
 .btn_gout p a {
   text-decoration: none;
-  color: #489b40;
+  background: #41963c;
+  background: linear-gradient(90deg, #41963c 23%, #beff7f 84%);
+  background: -moz-linear-gradient(90deg, #41963c 23%, #beff7f 84%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.carte_gout {
+  color: #72bf56;
 }
 
 .btn {
@@ -309,6 +331,12 @@ footer {
     transform: translateX(-1%);
   }
 }
+img {
+  display: block;
+  width: 90rem;
+  height: 5rem;
+}
+
 .menu1 {
   text-align: center;
   background-color: #fcdfdb;
@@ -329,7 +357,7 @@ footer {
 h1, h2, .header, .footer {
   text-align: center;
   font-size: 2rem;
-  color: #3b0101;
+  color: #3d1319;
 }
 
 .header, .footer {
@@ -350,7 +378,11 @@ h2:hover {
 }
 
 .fas {
-  color: coral;
+  background: #f05561;
+  background: linear-gradient(90deg, #f05561 0%, #f26b64 31%, #f6916a 100%);
+  background: -moz-linear-gradient(90deg, #f05561 0%, #f26b64 31%, #f6916a 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 h1 {
@@ -422,7 +454,7 @@ h1 {
   font-size: 2rem;
   padding-top: 4rem;
   text-align: left;
-  color: #df560f;
+  color: #c67412;
   margin-right: 20rem;
 }
 
@@ -431,7 +463,7 @@ h1 {
   line-height: 4rem;
   font-size: 2rem;
   padding-top: 4rem;
-  color: #DF560F;
+  color: #c67412;
 }
 
 .plat_papilles {
@@ -441,7 +473,7 @@ h1 {
   padding-top: 4rem;
   text-align: left;
   margin-right: 4rem;
-  color: #5f27be;
+  color: #fff5fe;
 }
 
 .prix_papilles {
@@ -449,7 +481,7 @@ h1 {
   line-height: 4rem;
   font-size: 2rem;
   padding-top: 4rem;
-  color: #5f27be;
+  color: #fff5fe;
 }
 
 .plat_sucrée {
@@ -459,7 +491,7 @@ h1 {
   padding-top: 4rem;
   text-align: left;
   margin-right: 22rem;
-  color: #20078f;
+  color: #6e4ccc;
 }
 
 .menu3 {
