--- a/main.scss
+++ b/main.scss
@@ -421,14 +421,14 @@ h1{
     padding-top: 4rem;
     text-align: left;
     margin-right: 4rem;
-    color: #fff5fe;
+    color: #a56799;
 }
 .prix_papilles{
     display: inline-block;
     line-height: 4rem;
     font-size: 2rem;
     padding-top: 4rem;
-    color: #fff5fe;
+    color: #a56799;
 }
 .plat_sucrée{
     display: inline-block;
