--- a/style.css
+++ b/style.css
@@ -533,7 +533,7 @@ h1 {
   padding-top: 4rem;
   text-align: left;
   margin-right: 4rem;
-  color: #fff5fe;
+  color: #a56799;
 }
 
 .prix_papilles {
@@ -541,7 +541,7 @@ h1 {
   line-height: 4rem;
   font-size: 2rem;
   padding-top: 4rem;
-  color: #fff5fe;
+  color: #a56799;
 }
 
 .plat_sucrée {
