--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ header {
   transform: scale(1.5);
 }
 
-.btn_chic p a {
+.chic {
   text-decoration: none;
   font-family: Arial, sans-serif;
   background: #924cf9;
@@ -156,6 +156,8 @@ header {
 
 .carte_chic {
   color: #c77412;
+  text-decoration: none;
+  font-size: 3rem;
 }
 
 .btn_delice {
@@ -200,7 +202,7 @@ header {
   transform: scale(1.5);
 }
 
-.btn_delice p a {
+.delice {
   text-decoration: none;
   background: #1b4ce4;
   background: linear-gradient(90deg, #1b4ce4 35%, #0889fb 54%);
@@ -212,6 +214,8 @@ header {
 
 .carte_delice {
   color: #0887fb;
+  text-decoration: none;
+  font-size: 3rem;
 }
 
 .btn_gout {
@@ -255,7 +259,7 @@ header {
   transform: scale(1.5);
 }
 
-.btn_gout p a {
+.gout {
   text-decoration: none;
   background: #41963c;
   background: linear-gradient(90deg, #41963c 23%, #beff7f 84%);
@@ -267,6 +271,8 @@ header {
 
 .carte_gout {
   color: #72bf56;
+  text-decoration: none;
+  font-size: 3rem;
 }
 
 .btn {
@@ -392,6 +398,18 @@ img {
   height: 5rem;
 }
 
+.acceuil {
+  display: block;
+  background-color: #579c87;
+  color: #fdcb46;
+  font-size: 4rem;
+  font-weight: bold;
+  height: 6rem;
+  text-align: center;
+  font-family: "roboto_condensedbold_italic";
+  text-decoration: none;
+}
+
 .menu1 {
   text-align: center;
   background-color: #fcdfdb;
@@ -425,7 +443,7 @@ h1, h2, .header, .footer {
   font-weight: bold;
 }
 
-h2 {
+h2, h3, h4 {
   margin-top: 6rem;
   position: relative;
   cursor: pointer;
@@ -504,8 +522,20 @@ h1 {
   background: #924cf9;
   background: linear-gradient(325deg, #924cf9 30%, #e0881d 93%);
   background: -moz-linear-gradient(325deg, #924cf9 30%, #e0881d 93%);
-  -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.titre_appetit {
+  text-align: center;
+  font-size: 2rem;
+  margin-top: 6rem;
+  position: relative;
+  cursor: pointer;
+  background: linear-gradient(to top, #B71C1C 0%, #B71C1C 10%, transparent 10.01%) no-repeat left bottom/0 100%;
+  transition: background-size 2s;
+  background-size: 0% 100%;
+  color: #c67412;
 }
 
 .plat_appetit {
@@ -526,6 +556,18 @@ h1 {
   color: #c67412;
 }
 
+.titre_papilles {
+  text-align: center;
+  font-size: 2rem;
+  margin-top: 6rem;
+  position: relative;
+  cursor: pointer;
+  background: linear-gradient(to top, #B71C1C 0%, #B71C1C 10%, transparent 10.01%) no-repeat left bottom/0 100%;
+  transition: background-size 2s;
+  background-size: 0% 100%;
+  color: #a56799;
+}
+
 .plat_papilles {
   display: inline-block;
   line-height: 4rem;
@@ -542,6 +584,18 @@ h1 {
   font-size: 2rem;
   padding-top: 4rem;
   color: #a56799;
+}
+
+.titre_sucrée {
+  text-align: center;
+  font-size: 2rem;
+  margin-top: 6rem;
+  position: relative;
+  cursor: pointer;
+  background: linear-gradient(to top, #B71C1C 0%, #B71C1C 10%, transparent 10.01%) no-repeat left bottom/0 100%;
+  transition: background-size 2s;
+  background-size: 0% 100%;
+  color: #6e4ccc;
 }
 
 .plat_sucrée {
