--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "robotolight";
+  src: url("Roboto-Light-webfont.eot");
+  src: url("Roboto-Light-webfont.eot?#iefix") format("embedded-opentype"), url("Roboto-Light-webfont.woff2") format("woff2"), url("Roboto-Light-webfont.woff") format("woff"), url("Roboto-Light-webfont.ttf") format("truetype"), url("Roboto-Light-webfont.svg#robotolight") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 html {
   font-size: 62.5%;
 }
@@ -209,7 +216,8 @@ header {
   background: -moz-linear-gradient(90deg, #1b4ce4 35%, #0889fb 54%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: "robotolight";
+  font-weight: bold;
 }
 
 .carte_delice {
@@ -451,6 +459,19 @@ h1, h2, .header, .footer {
   font-weight: bold;
 }
 
+img {
+  width: 30rem;
+  height: 2rem;
+}
+
+.img_note1 {
+  float: left;
+}
+
+.img_note2 {
+  float: right;
+}
+
 h2, h3, h4 {
   margin-top: 6rem;
   position: relative;
@@ -548,6 +569,12 @@ h1 {
     padding-left: 1rem;
     padding-right: 1rem;
   }
+}
+
+.img_papilles1a {
+  float: left;
+  width: 10rem;
+  height: 2rem;
 }
 
 .titre_chic {
