--- a/style.css
+++ b/style.css
@@ -39,8 +39,7 @@ html, body {
   }
 }
 
-header {
-  display: block;
+header h1 {
   background-color: #579c87;
   color: #fdcb46;
   font-size: 4rem;
@@ -50,7 +49,7 @@ header {
   font-family: "roboto_condensedbold_italic";
 }
 @media screen and (max-width: 1024px) {
-  header {
+  header h1 {
     display: block;
     width: 100%;
   }
@@ -449,7 +448,7 @@ img {
   }
 }
 
-h1, h2, .header, .footer {
+h2, h3, .header, .footer {
   text-align: center;
   font-size: 2rem;
   color: #3d1319;
@@ -464,15 +463,7 @@ img {
   height: 2rem;
 }
 
-.img_note1 {
-  float: left;
-}
-
-.img_note2 {
-  float: right;
-}
-
-h2, h3, h4 {
+h3, h4, h5 {
   margin-top: 6rem;
   position: relative;
   cursor: pointer;
@@ -481,7 +472,7 @@ h2, h3, h4 {
   background-size: 0% 100%;
 }
 
-h2:hover {
+h3:hover {
   background-size: 100% 100%;
 }
 
@@ -493,7 +484,7 @@ h2:hover {
   -webkit-text-fill-color: transparent;
 }
 
-h1 {
+h2 {
   padding-top: 4rem;
   padding-bottom: 3rem;
   font-size: 3rem;
@@ -826,16 +817,16 @@ h1 {
   }
 }
 
-.menu4 > h1 {
+.menu4 > h2 {
   color: #34C924;
 }
 
-.menu4 > h2, .menu3 > h2 {
+.menu4 > h3, .menu3 > h3 {
   color: black;
   font-style: italic;
 }
 
-.menu3 > h1 {
+.menu3 > h2 {
   color: #0770e0;
 }
 
