--- a/main.scss
+++ b/main.scss
@@ -65,14 +65,24 @@ html,body{
     margin: 0;
     padding: 0;
     height: 100%;
-    position: relative;
 }
-.haut, .bas{
+.haut{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media screen and (max-width: 1024px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+.bas{
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 6rem;
-
+    
     @media screen and (max-width: 1024px) {
         display: flex;
         flex-direction: column;
@@ -362,6 +372,10 @@ img{
     width: 30rem;
     height: 2rem;
 }
+.element_decor {
+        display: flex;
+        justify-content: space-between; 
+}
 h3, h4, h5{
     margin-top: 6rem;
     position: relative;
@@ -445,11 +459,6 @@ h2{
         padding-left: 1rem;
         padding-right: 1rem;
     }
-}
-.img_papilles1a {
-    float: left;
-    width: 10rem;
-    height: 2rem;
 }
 .titre_chic{
     background: rgb(146,76,249);
