--- a/main.scss
+++ b/main.scss
@@ -64,7 +64,8 @@ html{
 html,body{
     margin: 0;
     padding: 0;
-    height: 100%;
+    width: 100%;
+    height: auto;
 }
 .haut{
     display: flex;
@@ -98,6 +99,7 @@ header h1{
     height: 6rem;
     text-align: center;
     font-family: 'roboto_condensedbold_italic';
+    margin-top: 0;
 
     @media screen and (max-width: 1024px) {
         display: block;
@@ -360,8 +362,12 @@ img{
         padding-right: 1rem;
     }
 }        
-h2, h3, .header, .footer{
+h2, .header, .footer{
     text-align: center;
+    font-size: 2rem;
+    color: #3d1319;
+}
+h3{
     font-size: 2rem;
     color: #3d1319;
 }
@@ -371,8 +377,9 @@ h2, h3, .header, .footer{
 img{
     width: 30rem;
     height: 2rem;
+    margin-top: 6rem;
 }
-.element_decor {
+.element_decor, h3 {
         display: flex;
         justify-content: space-between; 
 }
